sass & auto compile to css for visual studio extension added

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+    <head>
+            <link rel="stylesheet" type="text/css" href="test.css">
+    </head>
 <body>
 
 Can I get this <acronym title="as soon as possible">ASAP</acronym>?
 
 <p><strong>Note:</strong> The acronym element is not supported in HTML5.</p>
-
 </body>
 </html>
