header created, footer started

--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
 <html>
-    <head>
-            <link rel="stylesheet" type="text/css" href="test.css">
-    </head>
+<head>
+    <link rel="stylesheet" type="text/css" href="index.css">
+</head>
 <body>
-
-Can I get this <acronym title="as soon as possible">ASAP</acronym>?
-
-<p><strong>Note:</strong> The acronym element is not supported in HTML5.</p>
+    <!-- HEADER -->
+    <header>
+        <div id="header-info">
+            <span>example@email.com</span>
+            <span>0123-4567-890</span>
+        </div>
+        <div id="header-icons">
+            <span>FB</span>
+            <span>Insta</span>
+            <span>Twitter</span>
+            <span>Youtube</span>
+        </div>
+        <div class="clear-float"></div>
+    </header>
+    <!-- NAVIGATION BAR -->
+    <nav>
+        <a href="javascript:void(0)" id="logo">MEGA</a>
+        <ul class="navbar">
+            <li><a href="javascript:void(0)">Home</a></li>
+            <li><a href="javascript:void(0)">Features</a></li>
+            <li><a href="javascript:void(0)">Blog Layouts</a></li>
+            <li><a href="javascript:void(0)">Shop</a></li>
+        </ul>
+        <div class="clear-float"></div>
+    </nav>
+    <footer>
+        <div id="copyright">
+            <ul>
+                <li>Contact</li>
+                <li>Terms</li>
+                <li>Privacy</li>
+            </ul>
+            <p>
+                <span>Wordpress Theme</span>
+                <span>Copyright 2018</span>
+            </p>
+        </div>
+        <div class="clear-float"></div>
+    </footer>
 </body>
 </html>
