--- a/index.html
+++ b/index.html
@@ -7,42 +7,83 @@
 <body>
     <!-- HEADER -->
     <header>
-        <div id="header-info">
-            <span>example@email.com</span>
-            <span>0123-4567-890</span>
+        <div class="container">
+            <div id="header-info">
+                <span>example@email.com</span>
+                <span>0123-4567-890</span>
+            </div>
+            <div id="header-icons">
+                <span class="fab fa-facebook-square fa-lg"></span>
+                <span class="fab fa-instagram fa-lg"></span>
+                <span class="fab fa-twitter fa-lg"></span>
+                <span class="fab fa-youtube fa-lg"></span>
+            </div>
+            <div class="clear-float"></div>
         </div>
-        <div id="header-icons">
-            <span class="fab fa-facebook-square fa-lg"></span>
-            <span class="fab fa-instagram fa-lg"></span>
-            <span class="fab fa-twitter fa-lg"></span>
-            <span class="fab fa-youtube fa-lg"></span>
-        </div>
-        <div class="clear-float"></div>
     </header>
     <!-- NAVIGATION BAR -->
     <nav>
-        <a href="javascript:void(0)" id="logo">MEGA</a>
-        <ul class="navbar">
-            <li><a href="javascript:void(0)"><i class="fas fa-home"></i> Home</a></li>
-            <li><a href="javascript:void(0)">Features <i class="fas fa-angle-down"></i></a></li>
-            <li><a href="javascript:void(0)">Blog Layouts</a></li>
-            <li><a href="javascript:void(0)">Shop <i class="fas fa-angle-down"></i></a></li>
-        </ul>
-        <div class="clear-float"></div>
-    </nav>
-    <footer>
-        <div id="copyright">
-            <ul>
-                <li>Contact</li>
-                <li>Terms</li>
-                <li>Privacy</li>
+        <div class="container">
+            <a href="javascript:void(0)" id="logo">MEGA</a>
+            <ul class="navbar">
+                <li><a href="javascript:void(0)"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="javascript:void(0)">Features <i class="fas fa-angle-down"></i></a></li>
+                <li><a href="javascript:void(0)">Blog Layouts</a></li>
+                <li><a href="javascript:void(0)">Shop <i class="fas fa-angle-down"></i></a></li>
             </ul>
-            <p>
-                <span>Wordpress Theme</span>
-                <span>Copyright 2018</span>
-            </p>
+            <div class="clear-float"></div>
         </div>
-        <div class="clear-float"></div>
+    </nav>
+    <main>
+        <div id="main-image" title="Free Image from Unsplash">
+            <h1>One Page Business Theme</h1>
+            <p>Now with Ecommerce and qTranslateX support</p>
+            <a href="javascript:void(0)">Click here</a>
+        </div>
+    </main>
+    <!-- Categories -->
+    <div id="categories">
+        <div class="container">
+            <div class="categories-list">
+                <h3>Categories</h3>
+                <ul>
+                    <li><i class="fas fa-angle-right"></i> Sample Posts</li>
+                    <li><i class="fas fa-angle-right"></i> Uncategorized</li>
+                </ul>
+            </div>
+            <div class="categories-list">
+                <h3>Contact Us</h3>
+                <ul>
+                    <li><i class="fas fa-map-marker-alt"></i> 123 Main Str New York, NY</li>
+                    <li><i class="fas fa-phone"></i> 0123-987-6543</li>
+                    <li><i class="fas fa-envelope"></i> support@email.com</li>
+                </ul>
+            </div>
+            <div class="categories-list">
+                <h3>About Us</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
+                </p>
+            </div>
+        </div>
+    </div>
+    <!-- FOOTER -->
+    <footer>
+        <div class="container">
+            <!-- Copyright -->
+            <div id="copyright">
+                <ul>
+                    <li>Contact</li>
+                    <li>Terms</li>
+                    <li>Privacy</li>
+                </ul>
+                <p>
+                    <span>Wordpress Theme</span>
+                    <span>Copyright 2018</span>
+                </p>
+             </div>
+             <div class="clear-float"></div>
+        </div>
     </footer>
 </body>
 </html>
